--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,11 @@ jobs:
               continue-on-error: false
 
             - name: Run Type check
-              run: bun run type-check
+              run: npm run type-check
               continue-on-error: false
 
             - name: Run Tests check
-              run: bun run test:unit
+              run: npm run test:unit
               continue-on-error: false
 
             - name: Build
