fixing missed @rollup/rollup-linux-x64-gnu package error for github actions

--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
         "msw",
         "prettier",
         "vitest"
-    ]
+    ],
+    "resolutions": {
+        "rollup": "npm:@rollup/wasm-node"
+    }
 }
