--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
         "vitest": "^1.6.0",
         "vue-tsc": "^2.0.11"
     },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "4.9.5"
+    },
     "cert-ignore": [
         "@vue/eslint-config-prettier",
         "@rushstack/eslint-patch",
@@ -57,8 +60,5 @@
         "msw",
         "prettier",
         "vitest"
-    ],
-    "resolutions": {
-        "rollup": "npm:@rollup/wasm-node"
-    }
+    ]
 }
